--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>ISKCON Rural Development Kanpur</title>
+<title>Jagannath Trader</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
@@ -27,7 +27,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center">365+ days left</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="http://www.irdk.in" target="_blank">ISKCON Rural Development Kanpur</a>
+    Powered by <a href="http://www.irdk.in" target="_blank">Jagannath Trader</a>
   </div>
 </div>
 
