--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center">365+ days left</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="http://www.irdk.in" target="_blank">Jagannath Trader</a>
+    Powered by <a href="http://www.jagannathtrader.com" target="_blank">Jagannath Trader</a>
   </div>
 </div>
 
