--- a/index.html
+++ b/index.html
@@ -2,34 +2,171 @@
 <html>
 <title>Jagannath Trader</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description=" content="Jagannath Trader is all about providing 
+the finest quality woods for your
+interior and exterior housing. 
+We provide products from all 
+range, variety and quality">
 <link rel="stylesheet" href="jt.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url('jt.jpg');
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
+.w3-sidenav a {font-family: "Roboto", sans-serif}
+body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </style>
-<body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    <!-- LOGO-->
+<body class="w3-content" style="max-width:1280px">
+<!-- Sidenav/menu -->
+<nav class="w3-sidenav w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidenav">
+  <div class="w3-container w3-padding-16">
+    <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-closebtn w3-hover-text-red"></i>
+    <img src="jt1.png" style="width:100%">
   </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON!</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">365+ days left</p>
+  <div class="w3-padding-32 w3-large w3-text-grey" style="font-weight:bold">
+    <a href="plywood.html">Plywood</a>
+    <a href="decorative_laminates.html">Decorative Laminates</a>
+    <a href="">Doors</a>
+    <a href="PVC_WPC.html">PVC/WPC</a>
+	<a href="">Veneer</a>
+    <a href="Shuttering_ply.html">Shuttering Ply</a>
+	<a href="Beeds.html">Beeds</a>
   </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="http://www.jagannathtrader.com" target="_blank">Jagannath Trader</a>
+  <a href="#footer" class="w3-padding">Contact</a> 
+   <a href="#footer" class="w3-padding">About Us</a> 
+</nav>
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-black w3-xlarge w3-padding-24">
+  <span class="w3-left w3-wide">Jagannath Trader</span>
+  <a href="javascript:void(0)" class="w3-right w3-opennav" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+</header>
+<!-- Overlay effect when opening sidenav on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:250px">
+  <!-- Push down content on small screens -->
+  <div class="w3-hide-large" style="margin-top:83px"></div>
+  <!-- Image header -->
+  </br><div class="w3-display-container w3-container">
+    <img src="ply11.jpg" alt="ply" style="width:100%">
+    <div class="w3-display-topleft w3-padding-xxlarge w3-text-white">
+      <h1 class="w3-jumbo w3-hide-small">Jagannath Trader</h1>
+      <h1 class="w3-hide-large w3-hide-medium">Household</h1>
+      <h1 class="w3-hide-small">Interior Collection 2017</h1>
+    </div>
   </div>
+  <br>
+  <!-- Product grid -->
+  <div class="w3-row ">
+    <div class="w3-col l3 s6">
+      <div class="w3-container">
+        <img src="ply 2.jpg" style="width:100%">
+        <p>PVC/WPC<br><b></b></p>
+      </div>
+      <div class="w3-container">
+        <img src="ply 3.jpg" style="width:100%">
+        <p>Decorative Laminates<br><b></b></p>
+      </div>
+    </div>
+    <div class="w3-col l3 s6">
+      <div class="w3-container">
+        <div class="w3-display-container">
+          <img src="ply 4.jpg" style="width:100%">
+          <span class="w3-tag w3-display-topleft"><!--New--></span>
+           </div>
+        <p>Doors<br><b></b></p>
+      </div>
+      <div class="w3-container">
+        <img src="ply 9.jpg" style="width:100%">
+        <p>Veneer<br><b></b></p>
+      </div>
+    </div>
+    <div class="w3-col l3 s6">
+      <div class="w3-container">
+        <img src="ply 6.jpg" style="width:100%">
+        <p>Beeds<br><b></b></p>
+      </div>
+      <div class="w3-container">
+        <div class="w3-display-container">
+          <img src="sp9.jpg" style="width:100%">
+          <span class="w3-tag w3-display-topleft"><!--Sale--></span>
+        </div>
+        <p>Shuttering Ply<br><b></b></p>
+      </div>
+    </div>
+    <div class="w3-col l3 s6">
+      <div class="w3-container">
+        <img src="ply 8.jpg" style="width:100%">
+        <p>Plywood<br><b></b></p>
+      </div>
+      <div class="w3-container">
+        <img src="ply 7.jpg" style="width:100%">
+        <p>Others<br><b></b></p>
+      </div>
+    </div>
+  </div>
+  <!-- Footer -->
+  <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
+    <div class="w3-row-padding">
+      <div class="w3-col s4">
+        <h4>Contact Us</h4>
+        <p>Questions? Go ahead.</p>
+        <form action="form.asp" target="_blank">
+          <p><input class="w3-input w3-border" type="text" placeholder="Name" name="Name" required></p>
+          <p><input class="w3-input w3-border" type="text" placeholder="Email" name="Email" required></p>
+          <p><input class="w3-input w3-border" type="number" placeholder="Phone Number" name="Phone Number" required></p>
+          <p><input class="w3-input w3-border" type="text" placeholder="Message" name="Message" required></p>
+          <button type="submit" class="w3-btn-block w3-padding w3-black">Send</button>
+        </form>
+      </div>
+      <div class="w3-col s4">
+        <h4>About</h4>
+		Jagannath Trader is all about providing <br>the finest quality woods for your<br> interior and
+		exterior housing. <br>We provide products from all <br>range, variety and quality.  
+        </div>
+      <div class="w3-col s4 w3-justify">
+        <h4>Store</h4>
+        <p><i class="fa fa-fw fa-map-marker w3-large w3-hover-text-red"></i>Jagannath Trader</p>
+        <p><i class="fa fa-fw fa-whatsapp w3-large w3-hover-text-green"></i>9616644389</p>
+        <p><i class="fa fa-fw fa-envelope w3-large w3-hover-text-orange"></i>jagannathtraders108@gmail.com</p>
+        <br>
+		<h4>Join Us On</h4>
+        <i class="fa fa-facebook-official w3-xlarge w3-hover-text-indigo"></i>
+        <a href="https://www.instagram.com/jagannathtrader/"><i class="fa fa-instagram w3-xlarge w3-hover-text-purple"></i></a>
+        <a href="https://twitter.com/JagannathTrader"><i class="fa fa-twitter w3-xlarge w3-hover-text-light-blue"></i></a>
+		<a href="https://www.youtube.com/channel/UCm48ACeCFnJ0MVUIOAmSYDw"><i class="fa fa-youtube-play w3-xlarge w3-hover-text-red"></i></a>
+      </div>
+    </div>
+  </footer>  
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d892.9408764911162!2d80.32311922917732!3d26.463351098957695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c477f2214e745%3A0x2fbd7e91176f0bac!2sJagannath+Traders!5e0!3m2!1sen!2sin!4v1486547372460"
+width="1013" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> 
+  <div class="w3-black w3-center w3-padding-24">&copy;  2017 Jagannath Trader designed &amp; developed by - <a href="http://www.pooripadhai.com" title="Website Developer" target="_blank" class="w3-hover-opacity">Pooripadhai</a></div>
+  <!-- End page content -->
 </div>
+<script>
+// Accordion 
+function myAccFunc() {
+    var x = document.getElementById("demoAcc");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
 
+// Click on the "Jeans" link on page load to open the accordion for demo purposes
+document.getElementById("myBtn").click();
+
+
+// Script to open and close sidenav
+function w3_open() {
+    document.getElementById("mySidenav").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+}
+ 
+function w3_close() {
+    document.getElementById("mySidenav").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none";
+}
+</script>
 </body>
 </html>
