--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <img src="ply11.jpg" alt="ply" style="width:100%">
     <div class="w3-display-topleft w3-padding-xxlarge w3-text-white">
       <h1 class="w3-jumbo w3-hide-small">Jagannath Trader</h1>
-      <h1 class="w3-hide-large w3-hide-medium">Household</h1>
+      <!--<h1 class="w3-hide-large w3-hide-medium">Household</h1>-->
       <h1 class="w3-hide-small">Interior Collection 2017</h1>
     </div>
   </div>
@@ -77,30 +77,30 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       </div>
       <div class="w3-container">
         <img src="ply 9.jpg" style="width:100%">
-        <p>Veneer<br><b></b></p>
+        <p>Veneer</p>
       </div>
     </div>
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="ply 6.jpg" style="width:100%">
-        <p>Beeds<br><b></b></p>
+        <p>Beeds</p>
       </div>
       <div class="w3-container">
         <div class="w3-display-container">
           <img src="sp9.jpg" style="width:100%">
           <span class="w3-tag w3-display-topleft"><!--Sale--></span>
         </div>
-        <p>Shuttering Ply<br><b></b></p>
+        <p>Shuttering Ply</p>
       </div>
     </div>
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="ply 8.jpg" style="width:100%">
-        <p>Plywood<br><b></b></p>
+        <p>Plywood</p>
       </div>
       <div class="w3-container">
         <img src="ply 7.jpg" style="width:100%">
-        <p>Others<br><b></b></p>
+        <p>Others</p>
       </div>
     </div>
   </div>
