--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <img src="ply11.jpg" alt="ply" style="width:100%">
     <div class="w3-display-topleft w3-padding-xxlarge w3-text-white">
       <h1 class="w3-jumbo w3-hide-small">Jagannath Trader</h1>
-      <!--<h1 class="w3-hide-large w3-hide-medium">Household</h1>-->
       <h1 class="w3-hide-small">Interior Collection 2017</h1>
     </div>
   </div>
@@ -60,11 +59,11 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="ply 2.jpg" style="width:100%">
-        <p>PVC/WPC<br><b></b></p>
+        <p>PVC/WPC</p>
       </div>
       <div class="w3-container">
         <img src="ply 3.jpg" style="width:100%">
-        <p>Decorative Laminates<br><b></b></p>
+        <p>Decorative Laminates</p>
       </div>
     </div>
     <div class="w3-col l3 s6">
@@ -73,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
           <img src="ply 4.jpg" style="width:100%">
           <span class="w3-tag w3-display-topleft"><!--New--></span>
            </div>
-        <p>Doors<br><b></b></p>
+        <p>Doors</p>
       </div>
       <div class="w3-container">
         <img src="ply 9.jpg" style="width:100%">
