--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="ply 8.jpg" style="width:100%">
-        <p>Plywood</p>
+        <p>Plywood<br></p>
       </div>
       <div class="w3-container">
         <img src="ply 7.jpg" style="width:100%">
