--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <!-- Push down content on small screens -->
   <div class="w3-hide-large" style="margin-top:83px"></div>
   <!-- Image header -->
-  </br><div class="w3-display-container w3-container">
+  <\br><div class="w3-display-container w3-container">
     <img src="ply11.jpg" alt="ply" style="width:100%">
     <div class="w3-display-topleft w3-padding-xxlarge w3-text-white">
       <h1 class="w3-jumbo w3-hide-small">Jagannath Trader</h1>
@@ -95,7 +95,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="ply 8.jpg" style="width:100%">
-        <p>Plywood<br></p>
+        <p>Plywood</p>
       </div>
       <div class="w3-container">
         <img src="ply 7.jpg" style="width:100%">
