--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <!-- Push down content on small screens -->
   <div class="w3-hide-large" style="margin-top:83px"></div>
   <!-- Image header -->
-  <\br><div class="w3-display-container w3-container">
+  <br><div class="w3-display-container w3-container">
     <img src="ply11.jpg" alt="ply" style="width:100%">
     <div class="w3-display-topleft w3-padding-xxlarge w3-text-white">
       <h1 class="w3-jumbo w3-hide-small">Jagannath Trader</h1>
@@ -58,12 +58,12 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-row ">
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="ply 2.jpg" style="width:100%">
-        <p>PVC/WPC</p>
+        <a href="PVC_WPC.html"><img src="ply 2.jpg" style="width:100%">
+        <p>PVC/WPC</p></a>
       </div>
       <div class="w3-container">
-        <img src="ply 3.jpg" style="width:100%">
-        <p>Decorative Laminates</p>
+        <a href="decorative_laminates.html"><img src="ply 3.jpg" style="width:100%">
+        <p>Decorative Laminates</p></a>
       </div>
     </div>
     <div class="w3-col l3 s6">
@@ -81,8 +81,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="ply 6.jpg" style="width:100%">
-        <p>Beeds</p>
+       <a href="Beeds.html"><img src="ply 6.jpg" style="width:100%">
+        <p>Beeds</p></a> 
       </div>
       <div class="w3-container">
         <div class="w3-display-container">
@@ -94,8 +94,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="ply 8.jpg" style="width:100%">
-        <p>Plywood</p>
+        <a href="plywood.html"><img src="ply 8.jpg" style="width:100%">
+        <p>Plywood</p></a>
       </div>
       <div class="w3-container">
         <img src="ply 7.jpg" style="width:100%">
