--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       </div>
       <div class="w3-container">
         <div class="w3-display-container">
-          <img src="sp9.jpg" style="width:100%">
+          <a href="Shuttering_ply.html"><img src="sp9.jpg" style="width:100%"></a>
           <span class="w3-tag w3-display-topleft"><!--Sale--></span>
         </div>
-        <p>Shuttering Ply</p>
+        <a href="Shuttering_ply.html"><p>Shuttering Ply</p></a>
       </div>
     </div>
     <div class="w3-col l3 s6">
