--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <title>Jagannath Trader</title>
-<meta charset="UTF-8">
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description=" content="Jagannath Trader is all about providing 
 the finest quality woods for your
 interior and exterior housing. 
